blackbox/kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus-blackbox
  namespace: sharedservices
  labels:
    app: prometheus-blackbox
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: prometheus-blackbox
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: prometheus-blackbox
        securityContext:
          privileged: true
        image: prom/blackbox-exporter
        imagePullPolicy: Always
        command:
          - "/bin/sh"
          - "-c"
          - >
            /bin/blackbox_exporter --config.file="/mnt/monitoring/prometheus/blackbox/config.yaml"
        volumeMounts:
        - name: monitoring-efs-volume
          mountPath: /mnt
        securityContext:
          privileged: true
        ports:
        - containerPort: 9115
          name: blackbox
        resources:
          requests:
            cpu: 500m
            memory: 2Gi
          limits:
            cpu: 1000m
            memory: 2Gi
      volumes:
#      - name: blackbox-config-volume
#        configMap:
#          name: blackbox-config
      - name: monitoring-efs-volume
        persistentVolumeClaim:
          claimName: monitoring-efs-pvc
