blackbox/kube/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-blackbox
  namespace: sharedservices
  labels:
    name: prometheus-blackbox
spec:
  ports:
  - name: prometheus-blackbox-port
    port: 9115
    protocol: TCP
  selector:
    component: prometheus-blackbox
